force-app/main/default/objects/Lease__c/Lease__c.object-meta.xml
<CustomObject>
    <label>Lease</label>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>