force-app/main/default/objects/Lease__c/fields/Lease_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Signed_Date__c</fullName>
    <label>Lease Signed Date</label>
    <type>Date</type>
</CustomField>