force-app/main/default/objects/Lease__c/fields/Lease_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Lease_Term_Months__c</fullName>
    <formula>IF(
    OR(
        ISBLANK(Start_Date__c),
        ISBLANK(End_Date__c)
    ),
    NULL,
    (
        (YEAR(End_Date__c) - YEAR(Start_Date__c)) * 12 +
        (MONTH(End_Date__c) - MONTH(Start_Date__c))
    ) +
    IF(DAY(End_Date__c) &gt;= DAY(Start_Date__c), 1, 0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Term Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>