force-app/main/default/objects/Lease__c/fields/Renewal_Notice_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Notice_Date__c</fullName>
    <label>Renewal Notice Date</label>
    <type>Date</type>
</CustomField>