force-app/main/default/objects/Lease__c/fields/Rent_Due_Day__c.field-meta.xml
<CustomField>
    <fullName>Rent_Due_Day__c</fullName>
    <label>Rent Due Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>